<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.uni_hannover.finf.hlapp.MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/colors_rgb" />

        <SeekBar
            android:id="@+id/red"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:max="255"
            android:thumbTint="@color/colorAccentRed" />

        <SeekBar
            android:id="@+id/green"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:max="255"
            android:thumbTint="@color/colorAccentGreen" />

        <SeekBar
            android:id="@+id/blue"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:max="255"
            android:thumbTint="@color/colorAccentBlue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkWhite"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="White" />

            <SeekBar
                android:id="@+id/white"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/colors_hsv" />

        <SeekBar
            android:id="@+id/hue"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:max="1000" />

        <SeekBar
            android:id="@+id/sat"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:max="1000" />

        <SeekBar
            android:id="@+id/val"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:max="1000" />

        <GridLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="1"
            >

            <TextView
                android:text="@string/buttons_label"
                android:textSize="32dip"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/esp8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/esp8" />

                <Button
                    android:id="@+id/esp6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/esp6" />

                <Button
                    android:id="@+id/esp4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/esp4" />

                <Button
                    android:id="@+id/esp2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/esp2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="horizontal">

                <Button
                    android:id="@+id/esp7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/esp7" />

                <Button
                    android:id="@+id/esp5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/esp5" />

                <Button
                    android:id="@+id/esp3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/esp3" />

                <Button
                    android:id="@+id/esp1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/esp1" />

            </LinearLayout>
        </GridLayout>

        <TextView
            android:id="@+id/string_led_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Led String Length" />

        <EditText
            android:id="@+id/led_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="60" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
